examples/type_system/failing/23_generic_call_return_mismatch.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E055: static typed let mismatch through generic return instantiation.

fn identity<T>(x: T) -> T { x }

let x: Int = identity("hello")
